--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "react/jsx-wrap-multilines": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
+    "react/prop-types":"off",
     "import/prefer-default-export": "off",
     "import/no-unresolved": "off",
     "import/order": "off",
